--- a/dz_prometheus/Vagrantfile
+++ b/dz_prometheus/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure("2") do |config|
     config.vm.box = "generic/ubuntu2204"
-    config.vm.hostname = "systemd"
+    config.vm.hostname = "prometheus"
     config.vm.synced_folder ".", "/vagrant"
   
     # config.vm.provider "virtualbox" do |vb|
@@ -10,7 +10,9 @@ Vagrant.configure("2") do |config|
     #   # Customize the amount of memory on the VM:
     #   vb.memory = "1024"
     # end
-  
+    config.vm.network "forwarded_port", guest: 3000, host: 3000
+    config.vm.network "forwarded_port", guest: 9090, host: 9090
+    config.vm.network "forwarded_port", guest: 9100, host: 9100
     config.vm.provision "shell", inline: <<-SHELL
         curl -fsSL https://get.docker.com -o get-docker.sh
         sh get-docker.sh
