--- a/dz_backup/Vagrantfile
+++ b/dz_backup/Vagrantfile
@@ -1,4 +1,6 @@
 Vagrant.configure("2") do |config|
+
+  config.vm.synced_folder ".", "/vagrant"
   # Настройка машины backup
   config.vm.define "backup" do |backup|
     backup.vm.box = "generic/ubuntu2204"
@@ -9,6 +11,11 @@ Vagrant.configure("2") do |config|
       vb.customize ["createhd", "--filename", "backup_disk.vdi", "--size", 2048] 
       vb.customize ["storageattach", :id, "--storagectl", "SATA Controller", "--port", 1, "--device", 0, "--type", "hdd", "--medium", "backup_disk.vdi"]
     end
+    backup.vm.provision "ansible_local" do |ansible|
+      ansible.install = true
+      ansible.verbose = "v"
+      ansible.playbook = "backup_provision.yml"
+    end
   end
 
   # Настройка машины client
@@ -16,5 +23,11 @@ Vagrant.configure("2") do |config|
     client.vm.box = "generic/ubuntu2204"
     client.vm.hostname = "client"
     client.vm.network "private_network", ip: "192.168.50.14"
+
+    client.vm.provision "ansible_local" do |ansible|
+      ansible.install = true
+      ansible.verbose = "v"
+      ansible.playbook = "client_provision.yml"
+    end
   end
 end
